# GAMES-101

./: .gitignore  README.md
Assignment1/: README.md
Assignment1/framework/: CMakeLists.txt  main.cpp  rasterizer.cpp  rasterizer.hpp  test.cpp
Assignment2/: README.md
Assignment2/framework/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: README.md
Assignment3/Code/: CMakeLists.txt  main.cpp  rasterizer.cpp
Assignment3/Code/notes/: notes.md
Assignment4/: README.md
Assignment4/code/: CMakeLists.txt  main.cpp
Assignment5/: README.md
Assignment5/Code/: CMakeLists.txt  Object.hpp  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
Assignment5/Code/notes/: notes.md  notes.sai2
Assignment6/: README.md
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  Renderer.cpp
Assignment6/Assignment6/notes/: notes.md
Assignment6/Code/: CMakeLists.txt  Scene.hpp  Triangle.hpp  main.cpp
Assignment6/Code/notes/: notes.md
Assignment7/: Material.hpp  README.md  Renderer.cpp  Scene.cpp  main.cpp
Assignment7/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Vector.hpp  global.hpp  main.cpp
Assignment7/Code/: Material.hpp  Triangle.hpp
Assignment7/notes/: Q.txt  notes.md
